--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,17 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
+    <div id="game-wrapper" class="w-full h-screen flex justify-center p-3">
+        <div id="game-screen" class="w-full h-screen flex flex-col items-center gap-5">
+            <h1 class="w-fit font-bold text-3xl">
+                Snake game
+            </h1>
+            <div id="game-board" class="w-[75vh] h-[75vh]">
+                
+            </div>
+        </div>
+    </div>
+
+<script type="module" src="./script/main.js"></script>
 </body>
 </html>
