--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game-wrapper" class="w-full h-screen flex justify-center p-3">
-        <div id="game-screen" class="w-full h-screen flex flex-col items-center gap-5">
+        <div id="game-screen" class="w-full h-[calc(100%-24px)] flex flex-col items-center gap-5">
             <h1 class="w-fit font-bold text-3xl">
                 Snake game
             </h1>
