--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,12 @@
             <h1 class="w-fit font-bold text-3xl">
                 Snake game
             </h1>
-            <div id="game-board" class="w-[75vh] h-[75vh]">
+            <div id="game-board" class="w-[75vh] h-[75vh] opacity-50">
                 
             </div>
+            <button id="play-btn" class="px-6 py-2 border border-black font-semibold rounded cursor-pointer">
+                Play
+            </button>
         </div>
     </div>
 
