--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="game-wrapper" class="w-full h-screen flex justify-center p-3">
         <div id="game-screen" class="w-full h-[calc(100%-24px)] flex flex-col items-center gap-5">
-            <h1 class="w-fit font-bold text-3xl">
+            <h1 id="title" class="w-fit font-bold text-3xl">
                 Snake game
             </h1>
             <div id="game-board" class="w-[75vh] h-[75vh] opacity-50">
@@ -18,6 +18,9 @@
             <button id="play-btn" class="px-6 py-2 border border-black font-semibold rounded cursor-pointer">
                 Play
             </button>
+            <!-- <button id="replay-btn" class="px-6 py-2 border border-black font-semibold rounded cursor-pointer bg-red-400">
+                replay
+            </button> -->
         </div>
     </div>
 
